# grrsmp

./: Cargo.toml  README.md  release-plz.toml
.github/workflows/: audit.yaml  cargo.yaml  release.yaml
crates/client/: Cargo.toml
crates/client/src/: error.rs  lib.rs
crates/client/src/domain/: commands.rs  events.rs  jobs.rs  known_identities.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  identity.rs  lib.rs
crates/core/src/chat/: messages.rs  mod.rs
crates/core/src/domain/: commands.rs  events.rs  mod.rs
crates/core/src/domain/jobs/: mod.rs
crates/core/src/net/: connection.rs  frame.rs  jobs.rs  mod.rs  verifier.rs
crates/core/src/net/connection/: frame.rs  mod.rs
crates/core/src/state/: active_connections.rs  known_identities.rs  mod.rs
crates/gtk/: Cargo.toml
crates/gtk/src/: jobs.rs  main.rs  utils.rs
crates/gtk/src/actions/: chat.rs  connection.rs  identity.rs  mod.rs  settings.rs
crates/gtk/src/chat/: mod.rs
crates/gtk/src/domain/: mod.rs
crates/gtk/src/gui/: chat.rs  chats.rs  connect.rs  identity.rs  mod.rs  topbar.rs
crates/gtk/src/state/: mod.rs  tracked_widgets.rs
docs/: architecture-clients.md  devlog.md  notation.md  specification.md
src/: main.rs  utils.rs
src/chat/: mod.rs
src/gui/: chat.rs  mod.rs
src/state/: mod.rs
