[workspace.package]
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "Secure Chat with P2P or relayed connections"
readme = "README.md"
homepage = "https://github.com/PlexSheep/grrsmp"
repository = "https://github.com/PlexSheep/grrsmp"


[workspace.dependencies]
chrono = "0.4.42"
gtk = { version = "0.10.0", package = "gtk4"}
grrsmp-core = {path = "./crates/core/"}
ring = { version = "0.17.14", features = ["std"] }
rustls = { version = "0.23.31", features = ["logging", "ring", "std"], default-features = false }
ed25519-dalek = { version = "2.2.0", features = ["batch", "serde"] }
rand = "0.8.5"

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gtk",
]
