[workspace.package]
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "Secure Chat with P2P or relayed connections"
readme = "README.md"
homepage = "https://github.com/PlexSheep/grrsmp"
repository = "https://github.com/PlexSheep/grrsmp"


[workspace.dependencies]
chrono = {version = "0.4.42", features = ["serde"]}
grrsmp-core = {path = "./crates/core/"}
ring = { version = "0.17.14", features = ["std"] }
#rustls = { version = "0.23.31", features = ["logging", "ring", "std"], default-features = false }
ed25519-dalek = { version = "2.2.0", features = ["batch", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.8.5"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["net", "rt", "rt-multi-thread", "tokio-macros", "sync", "io-util"] }

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gtk",
]
