[workspace.package]
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "Secure Chat with P2P or relayed connections"
readme = "README.md"
homepage = "https://github.com/PlexSheep/grrsmp"
repository = "https://github.com/PlexSheep/grrsmp"
rust-version = "1.85.1" # msrv

[workspace.lints.clippy]
# Prefer TryFrom between integers unless truncation is desired.
# For converting between floats and integers, there may not be an alternative.
cast_possible_truncation = "warn"

[workspace.dependencies]
chrono = {version = "0.4", features = ["serde"]}
grrsmp-core = {path = "./crates/core/"}
ed25519-dalek = { version = "2", features = ["batch", "serde"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8" # not the most recent version, since the rand-core dependency needs to be in sync with that in ed25519-dalek (which is not reexported)
log = "0.4"
# TODO: consider not using full tokio to reduce compile time
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
async-channel = "2.5.0"

[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/gtk",
]
