[package]
name = "sremp-client"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
log.workspace = true
async-channel.workspace = true
rmp-serde.workspace = true

[lints]
workspace = true
