[package]
name = "grrsmp-core"
version = "0.1.0"
edition = {workspace = true}
publish = {workspace = true}
license = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
authors = ["Christoph J. Scherr <software@cscherr.de>"]
description = "Secure Chat with P2P or relayed connections"
readme = "README.md"

[dependencies]
chrono.workspace = true
ring.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
log.workspace = true
tokio.workspace = true
thiserror = "2.0.16"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring", "logging"] }
