[package]
name = "sremp-core"
version = "0.1.0"
edition = {workspace = true}
publish = {workspace = true}
license = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
rust-version = {workspace = true}
description = "Secure Chat with P2P or relayed connections"
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
log.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror = "2"
async-channel.workspace = true
snow = { version = "0.10", features = ["use-curve25519", "use-chacha20poly1305", "use-blake2", "std"], default-features = false }
rmp-serde.workspace = true
