[package]
name = "grrsmp-gtk"
version = "0.1.0"
edition = {workspace = true}
publish = {workspace = true}
license = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}

[dependencies]
grrsmp-core.workspace = true
gtk = { version = "0.10.0", package = "gtk4"}
chrono.workspace = true
ed25519-dalek.workspace = true
log.workspace = true
env_logger = "0.11.8"
tokio.workspace = true
async-channel.workspace = true
