[package]
name = "sremp-gtk"
version = "0.1.0"
edition = {workspace = true}
publish = {workspace = true}
license = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
authors = {workspace = true}
rust-version = {workspace = true}

[lints]
workspace = true

[dependencies]
sremp-core.workspace = true
gtk = { version = "0.10", package = "gtk4"}
chrono.workspace = true
ed25519-dalek.workspace = true
log.workspace = true
env_logger = "0.11"
tokio.workspace = true
async-channel.workspace = true
